MDEV-5962: EITS: value "position" calculated incorrectly for CHAR(n) columns - Dont substract unsigned numbers, use correct calculations. - (there is no testcase because effort is required to come up with it)